<resources>
    <string name="app_name">LMS</string>
    <string name="splashscreenimage">SplashScreenImage</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="home">Home</string>
    <string name="my_course">My Course</string>
    <string name="self_study">Self Study</string>
    <string name="assignments">Assignments</string>
    <string name="mailbox">Mailbox</string>
    <string name="classwork">Classwork</string>
    <string name="homework">Homework</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome">Welcome</string>
    <string name="classwork_image">Classwork Image</string>
    <string name="homeworkImg">Homework Image</string>
    <string name="activities_image">Activities Image</string>
    <string name="projects_img">Projects Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="lms_logo">LMS_LOGO</string>
    <string name="role">Role</string>
    <string name="contact">Contact</string>
    <string name="already_have_an_account_sign_up">Already have an account?Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="student_image">STUDENT IMAGE</string>
    <string name="approve_students">Approve Students</string>
    <string name="assign_lessons">Assign lessons</string>
    <string name="conduct_online_exam">Conduct Online Exam</string>
    <string name="student_attendance">Student Attendance</string>
    <string name="assign_lesson">Assign Lesson</string>
    <string name="online_exam">Online Exam</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="add_subjects">Add subjects</string>
    <string name="generate_user_certificates">Generate User Certificates</string>
    <string name="organize_online_exam_for_students">Organize Online Exam For Students</string>
    <string name="logout">Logout</string>
    <string name="student_attendance_and_performance">Student attendance and performance</string>
    <string name="view_assignments_circulars">Assignments And Circulars</string>
    <string name="monitor_child_s_performance">Monitor Child\'s Performance</string>
    <string name="monitor_child_s_attendance">Monitor Child\'s Attendance</string>
    <string name="wards_assessment_report">Ward\'s Assessment Report</string>
    <string name="daily_activities_of_child">Daily Activities Of Child</string>
    <string name="teaching_image">Teaching Image</string>
    <string name="wards_assessment_report_img">Wards assessment report img</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="manage_teachers_attendance">Manage Teachers Attendance</string>
    <string name="principle_image">Principle Image</string>
    <string name="students_reports">Students Reports</string>
    <string name="teachers_report">Teachers Report</string>
    <string name="view_staff_activity">View Staff Activity</string>
    <string name="view_individual_and_group_based_exam_marks">View individual and group based exam marks</string>
    <string name="individual_and_group_based_exam_marks_text">Individual And Group Based Exam Marks Text</string>
    <string name="link">link</string>
    <string name="activities">Activities</string>
    <string name="projects">Projects</string>
    <string name="name">Name</string>
    <string name="approve">Approve</string>
    <string name="username">Username</string>
    <string name="subjects_name">Subjects Name</string>
    <string name="view_attendance">View Attendance</string>
    <string name="view_all_teachers">View All Teachers</string>
    <string name="get_students">Get Students</string>
    <string name="select_student">Select Student</string>
    <string name="Exams">Exams</string>
    <string name="course_name">Course Name</string>
</resources>