<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/home"
    android:enabled="true"
    android:title="@string/home"
    android:icon="@drawable/ic_outline_home" />

    <item android:id="@+id/myCourse"
        android:enabled="true"
        android:title="@string/my_course"
        android:icon="@drawable/ic_outline_book"/>

    <item android:id="@+id/selfStudy"
        android:enabled="true"
        android:title="@string/self_study"
        android:icon="@drawable/ic_outline_library_books"/>

    <item android:id="@+id/assignments"
    android:enabled="true"
    android:title="@string/Exams"
    android:icon="@drawable/ic_outline_assignment"/>

    <item android:id="@+id/mailBox"
        android:enabled="true"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit_app"/>
</menu>