<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:weightSum="1"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_img_sign_in"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/lmslogonobg"
        android:contentDescription="@string/lms_logo"/>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_input_email_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:startIconDrawable="@drawable/ic_email"
    android:hint="@string/username"
    app:endIconMode="clear_text"
    app:errorEnabled="true"
    android:textAppearance="@font/roboto"
    android:layout_marginTop="5dp"
    app:counterEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_email_login"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        />

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_lock"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@font/roboto"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_password_login"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/forgotPass"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"/>

    <TextView
        android:id="@+id/dont_have_an_account"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"/>

</LinearLayout>