<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:weightSum="1"
    tools:context=".SignUpActivity">

<TextView
    android:text="Create An Account"
    android:textSize="32sp"
    android:textColor="@color/colorPrimary"
    android:layout_centerHorizontal="true"
    android:fontFamily="@font/roboto_bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_person"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:textAppearance="@font/roboto"
        android:layout_marginTop="16dp"
        app:counterEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_name"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:textAppearance="@font/roboto"
        android:layout_marginTop="5dp"
        app:counterEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_lock"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@font/roboto"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_phone"
        android:hint="@string/contact"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:textAppearance="@font/roboto"
        app:counterEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_contact"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_supervised_user_circle"
        android:hint="@string/role">
        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_sign_up"
        android:text="@string/sign_up"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/already_have_an_account"
        android:text="@string/already_have_an_account_sign_in"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"/>
</LinearLayout>