<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/getApprovalCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/name_approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:padding="4dp"
                android:text="@string/name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_approval"
                android:fontFamily="@font/roboto_bold"
                android:padding="4dp"
                android:text="@string/contact"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_approve_std"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/approve"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>