<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/project_card_list"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rippleColor="@color/colorPrimary"
        app:cardCornerRadius="12dp"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:background="@drawable/myshadow"
        app:cardElevation="8dp"
        >

        <RelativeLayout
            android:padding="14dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/teachers_name"
            android:text="@string/name"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/teachers_email"
            android:linksClickable="true"
            android:text="@string/email"
            android:padding="8dp"
            android:autoLink="web|all"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_below="@+id/teachers_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/teachers_contact"
            android:text="@string/contact"
            android:linksClickable="true"
            android:autoLink="web|email"
            android:padding="8dp"
            android:layout_below="@+id/teachers_email"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>