<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui2"
    tools:context=".AdminDashboard">
    <ImageView
        android:id="@+id/profilePicAdmin"
        android:padding="10dp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/zainahmed"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:foreground="@drawable/frame"
        />

<!--    <ImageView-->
<!--        android:id="@+id/notification_icon"-->
<!--        android:padding="10dp"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:src="@drawable/ic_exit_app"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        />-->
    <TextView
        android:id="@+id/welcome_text"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"
        android:layout_toRightOf="@id/profilePicAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/admin_name"
        android:text="Admin"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginStart="4dp"
        android:textSize="18sp"
        android:layout_toRightOf="@id/profilePicAdmin"
        android:layout_below="@id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/admins_card"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:rippleColor="@color/colorPrimary"
        app:cardCornerRadius="14dp"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:background="@drawable/myshadow"
        app:cardElevation="8dp"
        >
        <TextView
            android:id="@+id/total_students"
            android:text="Total Students:"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_bold"
            android:padding="8dp"
            android:layout_marginStart="12dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/img_student"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_gravity="right|center"
            android:contentDescription="@string/student_image"
            android:src="@drawable/reading_book" />

        <Button
            android:id="@+id/btn_approve_students"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/approve_students"
            android:fontFamily="@font/roboto_bold"
            android:padding="4dp"
            android:textSize="12sp" />
        <Button
            android:id="@+id/view_all_teachers"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="98dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/view_all_teachers"
            android:fontFamily="@font/roboto_bold"
            android:padding="4dp"
            android:textSize="12sp" />

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/admin_bottom_navigation"
        android:layout_below="@+id/admins_card"
        android:layout_marginBottom="9dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:padding="8dp">
            <View
                android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_teacher_card"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_alignEnd="@id/strut"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/myshadow"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="14dp"
                app:cardElevation="8dp"
                app:rippleColor="@color/colorPrimary">

                <ImageView
                    android:id="@+id/add_teacher_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/classwork_image"
                    android:padding="18dp"
                    android:src="@drawable/teacher" />

                <TextView
                    android:id="@+id/add_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/add_teacher"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/view_attendance_card"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_alignStart="@id/strut"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:rippleColor="@color/colorPrimary">

                <ImageView
                    android:id="@+id/add_subjects_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:contentDescription="@string/homeworkImg"
                    android:padding="8dp"
                    android:src="@drawable/subjects" />

                <TextView
                    android:id="@+id/view_attendance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/view_attendance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/generate_user_certificates_card"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_below="@+id/view_attendance_card"
                android:layout_alignEnd="@id/strut"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:rippleColor="@color/colorPrimary">

                <ImageView
                    android:id="@+id/generate_user_certificates_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="26dp"
                    android:contentDescription="@string/activities_image"
                    android:padding="4dp"
                    android:src="@drawable/certificate" />

                <TextView
                    android:id="@+id/generate_user_certificates_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/generate_user_certificates"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/projectsCard"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_below="@+id/view_attendance_card"
                android:layout_alignStart="@id/strut"
                android:layout_alignEnd="@id/strut"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:rippleColor="@color/colorPrimary">

                <ImageView
                    android:id="@+id/projects_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="38dp"
                    android:contentDescription="@string/projects_img"
                    android:padding="2dp"
                    android:src="@drawable/classwork" />

                <TextView
                    android:id="@+id/projects_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/organize_online_exam_for_students"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/admin_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:elevation="8dp"
        android:layout_alignParentBottom="true"
        app:itemRippleColor="@color/colorPrimary"
        app:menu="@menu/bottom_nav_admin" />
</RelativeLayout>